--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
-Kemba Walker Trade Destinations
-        The Charlotte Hornets have been a mediocre team the past couple of seasons. Under coach Steve Clifford they have only made it to the playoffs once in the past four seasons, which was 2 seasons ago. They need a reset. With no way to break out of mediocrity, and no way to get rid of players vastly underperforming their contracts, they need to rebuild.
-        If this team is going to rebuild, they need to trade their franchise player, Kemba Walker. His ceiling is probably being the second best player on a championship team, so there are many teams with other stars that he would fit in with perfectly. With a league obsessed with outside shooting point guards, Kemba would get a hefty return. Two teams that have the chance to trade for Kemba Walker are The New York Knicks, and The Denver Nuggets.
-        The Knicks have an interesting situation. They need a good point guard and have a promising prospect in Frank Nitilikna, but it may take too much time to develop him alongside Kristaps Porzingis. In that case the knicks would be looking for a star to pair with their incumbent star, and Kemba would fit perfectly.
-The Knicks would send Courtney Lee, Lance Thomas, Frank Nitilinka, and their 2018 first round pick for Kemba Walker, Jeremy Lamb, and the Hornets 2018 second round pick. Lamb and Walker would be improvements at both guard positions while the hornets can get the beginning pieces of a rebuild through Frank and the Knicks first round pick. The contracts of Thomas and Lee are expiring and give the hornets more financial flexibility later so it is beneficial for both teams.
-The Nuggets have a huge hole at point guard. Their Jamal Murray as a point guard experiment hasn't gone either way yet, and he probably won't develop in time for the primes of the older players on the team. So in this trade it would center around Jamal, a young promising player, for an established star in Kemba Walker.
-The Nuggets would send Kenneth Faried, Darrell Arthur, Jamal Murray, and their 2018 First round pick for Kemba Walker and Marvin Williams. The contracts add up to be equal, and both teams get things they covet. Denver gets out from under Faried’s giant contract, and gets a formidable point guard and wing. The Hornets get two building blocks in the first round pick and Jamal Murray, and an expiring contract as they try to get as much cap space as possible.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<title>Potential Kemba Walker Trades</title>
+	<meta content="With Kemba Walker on the trade block, here are some potential trades" name="description">
+	<meta content="Bruce Baldwin" name="Author">
+</head>
+<body>
+	<article>
+		<h1>Kemba Walker Trade Destinations</h1>
+		<p>The Charlotte Hornets have been a mediocre team the past couple of seasons. Under coach Steve Clifford they have only made it to the playoffs once in the past four seasons, which was 2 seasons ago. They need a reset. With no way to break out of mediocrity, and no way to get rid of players vastly underperforming their contracts, they need to rebuild.</p>
+		<p>If this team is going to rebuild, they need to trade their franchise player, Kemba Walker. His ceiling is probably being the second best player on a championship team, so there are many teams with other stars that he would fit in with perfectly. With a league obsessed with outside shooting point guards, Kemba would get a hefty return. Two teams that have the chance to trade for Kemba Walker are The New York Knicks, and The Denver Nuggets.</p>
+		<h3>The New York Knicks</h3>
+		<p>The Knicks have an interesting situation. They need a good point guard and have a promising prospect in Frank Nitilikna, but it may take too much time to develop him alongside Kristaps Porzingis. In that case the knicks would be looking for a star to pair with their incumbent star, and Kemba would fit perfectly.</p>
+		<p>The Knicks would send Courtney Lee, Lance Thomas, Frank Nitilinka, and their 2018 first round pick for Kemba Walker, Jeremy Lamb, and the Hornets 2018 second round pick. Lamb and Walker would be improvements at both guard positions while the hornets can get the beginning pieces of a rebuild through Frank and the Knicks first round pick. The contracts of Thomas and Lee are expiring and give the hornets more financial flexibility later so it is beneficial for both teams.</p>
+		<h3>The Denver Nuggets</h3>
+		<p>The Nuggets have a huge hole at point guard. Their Jamal Murray as a point guard experiment hasn't gone either way yet, and he probably won't develop in time for the primes of the older players on the team. So in this trade it would center around Jamal, a young promising player, for an established star in Kemba Walker.</p>
+		<p>The Nuggets would send Kenneth Faried, Darrell Arthur, Jamal Murray, and their 2018 First round pick for Kemba Walker and Marvin Williams. The contracts add up to be equal, and both teams get things they covet. Denver gets out from under Faried’s giant contract, and gets a formidable point guard and wing. The Hornets get two building blocks in the first round pick and Jamal Murray, and an expiring contract as they try to get as much cap space as possible.</p>
+	</article>
+</body>
+</html>
