--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-</head>
 <body>
-	-
 	<meta charset="utf-8"><b class="Keyword">Potential Kemba Walker Trades</b>
 	<meta content="With Kemba Walker on the trade block, here are some potential trades" name="description">
 	<meta content="Bruce Baldwin" name="Author">
 	<article>
-		<img src="picture/image/Kemba.jpg">
+		<img src="image/Kemba.jpg">
 		<h1>Kemba Walker Trade Destinations</h1>
 		<p>The Charlotte Hornets have been a mediocre team the past couple of seasons. Under coach Steve Clifford they have only made it to the playoffs <em>once</em> in the past four seasons, which was 2 seasons ago. They need a reset. With no way to break out of mediocrity, and no way to get rid of players vastly underperforming their contracts, they <em>need to rebuild.</em></p>
 		<ul>
